# pillpicker

./: README.md  docker-compose.yaml  package.json  pnpm-lock.yaml
ai/: .gitignore  episodic_training_pills.ipynb  events.out.tfevents.1699176652.Bens-MBP.home.42519.1  extract-350.json  index.py  main.py  requirements.txt  test.json  write-to-redis.py
data/: extract.js  jsonify.js
l2server/: Cargo.toml
l2server/src/: main.rs
public/: .gitignore  medium.json  short.json
src/: root.tsx
src/components/: camera.tsx  overlay-list.tsx  overlay-selected.tsx
src/lib/: client.ts
src/routes/: index.tsx  init.ts  search.ts
src/stores/: selected.tsx
