[package]
name = "l2server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floating-distance = "0.3.1"
geo = "0.26.0"
rayon = "1.8.0"
rocket = {version = "=0.5.0-rc.4", features = ["json"]}
serde = "1.0.190"
serde_json = "1.0"
